WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236888
[WebGPU] Tracer bullet part 2: Fix infinite recursion in GPUDevice::ref()
https://bugs.webkit.org/show_bug.cgi?id=236888
Summary
[WebGPU] Tracer bullet part 2: Fix infinite recursion in GPUDevice::ref()
Myles C. Maxfield
Reported
2022-02-19 12:38:40 PST
.
Attachments
Patch
(2.73 KB, patch)
2022-02-19 12:55 PST
,
Myles C. Maxfield
dino
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2022-02-19 12:55:52 PST
Created
attachment 452651
[details]
Patch
Myles C. Maxfield
Comment 2
2022-02-21 10:55:17 PST
Committed
r290252
(?): <
https://commits.webkit.org/r290252
>
Radar WebKit Bug Importer
Comment 3
2022-02-21 10:56:20 PST
<
rdar://problem/89245587
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug