[WebGPU] Tracer bullet part 2: Fix infinite recursion in GPUDevice::ref() https://bugs.webkit.org/show_bug.cgi?id=236888

Reviewed by Dean Jackson.

refEventTarget() calls ref() which called refEventTarget(). The solution is
to tell GPUDevice that it's using RefCounted::ref().

* Modules/WebGPU/GPUDevice.cpp:
* Modules/WebGPU/GPUDevice.h:


Canonical link: https://commits.webkit.org/247577@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290252 268f45cc-cd09-0410-ab3c-d52691b4dbfc