Source/WebCore/Modules/WebGPU/GPUDevice.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2021 Apple Inc. All rights reserved.
+ * Copyright (C) 2021-2022 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -58,8 +58,11 @@
 #include "JSGPUOutOfMemoryError.h"
 #include "JSGPURenderPipeline.h"
 #include "JSGPUValidationError.h"
+#include <wtf/IsoMallocInlines.h>
 
 namespace WebCore {
+
+WTF_MAKE_ISO_ALLOCATED_IMPL(GPUDevice);
 
 GPUDevice::~GPUDevice() = default;
 
