Source/WebCore/Modules/WebGPU/GPUDevice.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2021 Apple Inc. All rights reserved.
+ * Copyright (C) 2021-2022 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -37,6 +37,7 @@
 #include "ScriptExecutionContext.h"
 #include <optional>
 #include <pal/graphics/WebGPU/WebGPUDevice.h>
+#include <wtf/IsoMalloc.h>
 #include <wtf/Ref.h>
 #include <wtf/text/WTFString.h>
 
@@ -73,7 +74,8 @@ class GPUSupportedLimits;
 class GPUTexture;
 struct GPUTextureDescriptor;
 
-class GPUDevice : public ActiveDOMObject, public EventTargetWithInlineData {
+class GPUDevice : public RefCounted<GPUDevice>, public ActiveDOMObject, public EventTargetWithInlineData {
+    WTF_MAKE_ISO_ALLOCATED(GPUDevice);
 public:
     static Ref<GPUDevice> create(ScriptExecutionContext* scriptExecutionContext, Ref<PAL::WebGPU::Device>&& backing)
     {
@@ -122,6 +124,9 @@ public:
     PAL::WebGPU::Device& backing() { return m_backing; }
     const PAL::WebGPU::Device& backing() const { return m_backing; }
 
+    using RefCounted::ref;
+    using RefCounted::deref;
+
 private:
     GPUDevice(ScriptExecutionContext* scriptExecutionContext, Ref<PAL::WebGPU::Device>&& backing)
         : ActiveDOMObject { scriptExecutionContext }
@@ -140,7 +145,7 @@ private:
     void derefEventTarget() final { deref(); }
 
     LostPromise m_lostPromise;
-    Ref<PAL::WebGPU::Device>&& m_backing;
+    Ref<PAL::WebGPU::Device> m_backing;
 };
 
 }
